--- a/src/app/modules/guide/components/activities/activities.component.scss
+++ b/src/app/modules/guide/components/activities/activities.component.scss
@@ -8,3 +8,15 @@
     display: none;
 }
 }
+.col {
+    padding: 0;
+} 
+.card-title{
+    font-size: 50px;
+}
+
+
+table.table th, table.table td {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
