--- a/src/app/modules/guide/components/messages/messages.component.html
+++ b/src/app/modules/guide/components/messages/messages.component.html
@@ -1,10 +1,7 @@
-<div class="container mt-5" >
-    <div class="row chatRow">
-        <div class="col-sm-9">
-            <app-chats></app-chats>
-        </div>
-        <div class="col-sm-3">
-            <app-chat-history-list></app-chat-history-list>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
