--- a/src/app/modules/guide/pages/guide-home/guide-home.component.scss
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.scss
@@ -1,29 +1,18 @@
 .navside {
     overflow: -moz-hidden-unscrollable;
     width: 100%;
-    // z-index: 1;
-    // left: 0;
-    // top: 45px;
-    // padding-top: 20px;
-    // position: sticky;
     background-color: #b7e8eb !important;
     margin: 0;
     height: 100%;
-    // overflow: auto;
 }
-
-// .sticky {
-//     position: -webkit-sticky;
-//     position: sticky;
-//     top: 0;
-// }
 .guide-name {
     color: #3AAF;
     margin: 10px;
     padding: 2px;
 }
 
-// .main {
-// margin-left: 250px;
-
-/* Same as the width of the sidebar */
+@media(min-width: 992px) {
+    .main {
+        padding-left: 0px;
+    }
+}
