--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -1,14 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <!--Material textarea-->
-  <div class="md-form md-outline">
-    <textarea type="text" id="form75" class="form-control md-textarea" rows="3" mdbInput></textarea>
-    <label for="form75">Post some Blog</label>
-    <button mdbBtn type="button" size="md" color="pink" mdbWavesEffect style="float: right;">Send &nbsp;<i class="far fa-paper-plane"></i></button>
-  </div>
-    </div>
-  </div>
+  <app-blog></app-blog>
   <!--  -->
   <div class="d-none d-md-block" *ngIf="bookingsList">
   <div class="row mt-3">
@@ -143,7 +134,7 @@
          <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
       </div> 
       <div class="col">
-        <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTourist(data.touristId.email)" mdbWavesEffect>Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
+        <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light" (click)="contactTourist(content, selectedBooking.touristId.email)" mdbWavesEffect>Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
       </div>
     </div>
 </ng-template>
