--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -1,175 +1,130 @@
-<div class="request">
-
-<!-- requests -->
-<div class="request-card">
-
+<div class="container-fluid">
   <!--  -->
-
-<div *ngIf="requestList">
-  <div class="table-responsive">
-    <div class="card-title"><h4>Your Requests</h4></div>
-    <table class="table table-hover">
-      <thead >
-        <tr>
-          <th scope="col">Sr no.</th>
-          <th scope="col">Tourist</th>
-          <th scope="col">Places</th>
-          <th scope="col">Booking Date</th>
-          <!-- <th scope="col">Duration</th>
-          <th scope="col">Price</th>
-          <th scope="col">People</th>
-          <th scope="col">Group Type</th>
-          <th scope="col">Tour</th>
-          <th scope="col">Action</th> -->
-        </tr>
-      </thead>
-      <tbody>
-        <tr (click)="basicModal.show()" *ngFor="let data of requestList; let i = index">
-          <th scope="row">{{i+1}}</th>
-          <td>{{data.touristId.name}}</td>
-          <td>{{data.places.toString()}}</td>
-          <td>{{data.bookingDate | date: 'dd-MM-yyyy'}}</td>
-          <!-- <td>{{data.duration}}</td> -->
-          <!-- <td>{{data.price}}</td> -->
-          <!-- <td>{{data.noOfPeople}}</td> -->
-          <!-- <td>{{data.groupType}}</td> -->
-          <!-- <td>{{data.tourType}}</td> -->
-          <!-- <td>
-            <button class="btn" (click)="acceptRequest(data._id)" color="success" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
-              <b>ACCEPT</b>
-            </button>
-            <button class="btn" (click)="rejectRequest(data._id)" color="danger" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
-              <b>REJECT</b>
-            </button>
-          </td> -->
-        </tr>
-      </tbody>
-
-    </table>
+  <app-blog></app-blog>
+  <div class="d-none d-md-block" *ngIf="requestList">
+  <div class="row mt-3">
+    <div class="col-12 text-center">
+      <div class="card first" style="z-index: 100; width: 90%; margin-left: 5%;">
+        <h5 class="text-center py-2 my-0">Your Requests</h5>
+      </div>
     </div>
-</div>
-
-<div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close pull-right" aria-label="Close" (click)="basicModal.hide()">
-          <span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title w-100" id="myModalLabel">Requests</h4>
-      </div>
-      <div class="modal-body">
-       <div class="col-12 row">
-         <div class="col-4 mb-2">
-           <div class="head"><B>Name</B></div>
-           <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>Booking date</B></div>
-          <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>Price</B></div>
-          <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>Duration</B></div>
-          <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>People</B></div>
-          <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>Group Type</B></div>
-          <div class="detail">Archit</div>
-         </div>
-         <div class="col-4 mb-2">
-          <div class="head"><B>Tour</B></div>
-          <div class="detail">Archit</div>
-         </div>
-
-
-       </div>
-      </div>
-      <div class="modal-footer m-0 p-0">
-        <button type="button" mdbBtn color="secondary" size="sm" class="waves-light" aria-label="Close" (click)="basicModal.hide()" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
-        <button type="button" mdbBtn color="green" size="sm" class="relative waves-light" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
-        <button type="button"  mdbBtn color="danger" size="sm" class="relative waves-light" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
-        <!-- <button type="button" mdbBtn color="deep-orange" size="sm" class="relative waves-light" mdbWavesEffect>Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button> -->
+  </div>
+  <div class="card mb-5" style="margin-top: -25px;">
+    <div class="card-body">
+      <div class="mt-3 mb-3">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead >
+              <tr>
+                <th scope="col">Sr no.</th>
+                <th scope="col">Tourist</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">Duration</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let data of requestList; let i = index">
+                <th scope="row">{{i+1}}</th>
+                <td>{{data.tourType | titlecase}}</td>
+                <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
+                <td>{{data.duration}} days</td>
+                <td>
+                  <button class="btn" color="info" style="margin: auto;" (click)="open(content, data)" mdbBtn type="button" size="sm" mdbWavesEffect>
+                    <b>VIEW</b>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
       </div>
     </div>
   </div>
 </div>
-  <!-- /table -->
 
-  <!-- <mdb-card >
-  <div class="container1">
-      <mdb-card-body>
-          <mdb-card-title>
-              <h4>Jaipur, Rajasthan</h4>
-          </mdb-card-title>
-
-          <div class="row">
-
-            <mdb-card-text class="col-sm-6">
-                  <div>Tourist: <a href="#!">Arjun Gupta</a></div>
-                  <div>Gender: Male </div>
-                  <div>Booking Date: March 25,2020</div>
-              </mdb-card-text>
-              <mdb-card-text class="col-sm-6">
-                <div>Number of people: 4</div>
-                <div>Price: Rs.500/hour</div>
-                <div>Duration: 5 days</div>
-            </mdb-card-text>
-
-          </div>
-
-      </mdb-card-body>
-      <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
+<div *ngIf="!requestList">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1>No Requests !!</h1>
+    </div>
   </div>
-  <mdb-card-footer class="text-muted" style="height: 55px;">
-      <a href="#!">View more</a>
-      <button class="float-right footer-btn"  color="success" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>ACCEPT</b></button> &nbsp;
-      <button class="float-right footer-btn"  color="danger" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>REJECT</b></button>
-  </mdb-card-footer>
-</mdb-card>
 </div>
 
-<!-- second
-<div class="request-card" >
-
-  <mdb-card>
-  <div class="container1">
-      <mdb-card-body>
-          <mdb-card-title>
-              <h4>Jaipur, Rajasthan</h4>
-          </mdb-card-title>
-          <div class="row">
-
-            <mdb-card-text class="col-sm-6">
-                  <div>Tourist: <a href="#!">Arjun Gupta</a></div>
-                  <div>Gender: Male </div>
-                  <div>Booking Date: March 25,2020</div>
-              </mdb-card-text>
-              <mdb-card-text class="col-sm-6">
-                <div>Number of people: 4</div>
-                <div>Price: Rs.500/hour</div>
-                <div>Duration: 5 days</div>
-            </mdb-card-text>
-
-          </div>
+<div class="d-block d-md-none">
+  <h1> Hey cards!</h1>
+</div>
+  
+</div>
 
 
-      </mdb-card-body>
-      <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-right" alt="...">
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h5 class="modal-title" id="modal-basic-title">{{selectedRequest.tourType | titlecase}} Tour</h5>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-  <mdb-card-footer class="text-muted" style="height: 55px;">
-      <a href="#!">View more</a>
-      <button class="float-right footer-btn"  color="success" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>ACCEPT</b></button> &nbsp;
-      <button class="float-right footer-btn"  color="danger" style="width: auto; margin: auto;" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>REJECT</b></button>
-  </mdb-card-footer>
-</mdb-card> -->
-</div>
+  <div class="modal-body p-4">
+      <div class="row">
+        <div class="col-12">
+         <h6>{{selectedRequest.touristId[0]?.name | titlecase}}
+            <span class="float-right">{{selectedRequest.bookingDate | date: 'dd-MM-yyyy'}}</span>
+          </h6>
+        </div>
+      </div>
+      <hr class="mt-0">
+      <div class="row">
+        <div class="col-6">
+          <B>Price</B>
+        </div>
+        <div class="col-6">
+          Rs. {{selectedRequest.price}}/-
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <B>Start Date</B>
+        </div>
+        <div class="col-6">
+          {{selectedRequest.startDate | date: 'dd-MM-yyyy'}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <B>Duration</B>
+        </div>
+        <div class="col-6">
+          {{selectedRequest.duration}} days
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <B>People</B>
+        </div>
+        <div class="col-6">
+          {{selectedRequest.noOfPeople}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <B>Group Type</B>
+        </div>
+        <div class="col-6">
+          {{selectedRequest.groupType | titlecase}}
+        </div>
+      </div>
+  </div>
+  <div class="modal-footer row mx-0 ">
+       <div class="col">
+         <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
+      </div> 
+      <div class="col">
+        <button type="button" mdbBtn color="green" (click)="acceptRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Accept&nbsp;<mdb-icon fas icon="map-marked-alt"></mdb-icon></button>
+      </div>
+      <div class="col">
+        <button type="button"  mdbBtn color="danger" (click)="rejectRequest(content, selectedRequest._id)" size="sm" class="btn-block waves-light" mdbWavesEffect>Reject&nbsp;<mdb-icon far icon="trash-alt"></mdb-icon></button>
+      </div>
+    </div>
+</ng-template>
 
-</div>
