--- a/src/app/modules/guide/components/requests/requests.component.scss
+++ b/src/app/modules/guide/components/requests/requests.component.scss
@@ -1,20 +1,12 @@
-
-
+.col {
+    padding: 0;
+} 
 .card-title{
-font-size: 50px;
-}
-.table thead{
-background: #553d67;
-color: white;
+    font-size: 50px;
 }
 
-th , td{
 
-border: 2px solid #553d67;
-}
-tbody td:hover , tbody th:hover{
-background: #8735977a;
-}
-tbody tr:hover{
-background:#72295a62 !important;
+table.table th, table.table td {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
