--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -44,15 +44,38 @@
 </div>
 
 <div *ngIf="!previousBookingsList">
-  <div class="row">
+  <div class="row cust-grid">
     <div class="col-12 text-center">
       <h1>No Recent activities !!</h1>
     </div>
   </div>
 </div>
 
-<div class="d-block d-md-none">
-  <h1> Hey cards!</h1>
+<div class="d-block d-md-none mt-4">
+  <mdb-card class="bag mb-4" *ngFor="let data of previousBookingsList">
+    <mdb-card-body>
+      <mdb-card-title>
+        <h4>{{data.tourType | titlecase}} Tour</h4>
+      </mdb-card-title>
+      <mdb-card-text >
+        <div class="row">
+          <div class="col-4">
+          <div><b>Start-Date</b></div>
+          <div>{{data.startDate | date: 'dd-MM-yyyy'}}</div>
+        </div>
+        <div class="col-4">
+          <div><b>Duration</b></div>
+          <div>{{data.duration}} days</div>
+        </div>
+        <div class="col-4">
+          <div><b>People</b></div>
+          <div>{{data.noOfPeople}}</div>
+        </div>
+        </div>
+      </mdb-card-text>
+      <a size="sm" class="float-right" (click)="open(content, data)" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+    </mdb-card-body>
+  </mdb-card>
 </div>
   
 </div>
