--- a/src/app/modules/tourists/components/guides-list/guides-list.component.scss
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.scss
@@ -1,49 +1,48 @@
-.container1 img {
-    // border-radius: 50%;
-    height: auto;
-    width: 200px;
-    margin: 3px;
-    // margin: 14px;
+// .container1 img {
+//     height: auto;
+//     width: 200px;
+//     margin: 3px; 
+// }
+.contained {
+    width: 260px;
+    height: 250px;
+    object-fit: cover;
+    vertical-align: middle;
 }
 
 .container1 {
     display: flex;
 }
-.deal-card{
+
+.deal-card {
     border: 1px solid rgba(128, 128, 128, 0.315);
     margin: 30px;
 }
-.deal-card:hover{
+
+.deal-card:hover {
     background-color: rgba(252, 255, 47, 0.418);
 }
-.deal-card p{
+
+.deal-card p {
     font-size: 13px;
     margin: 0;
 }
 
-mdb-card-text,
-mdb-card-text div {
-    font-size: medium !important;
-}
-.requests{
+.requests {
     display: flex;
 }
-.request-card{
-// width: 500px;
-}
-.side-card{
+
+.side-card {
     // padding: 3px;
     background-color: rgba(189, 235, 122, 0.384);
 }
-.collapse {
-    margin-left:30px;
-}
-.filters{
+
+.filters {
     border-right: 1px solid rgba(128, 128, 128, 0.342);
 }
-@media only screen and (max-width: 600px){
 
-    .request-card{
+@media only screen and (max-width: 600px) {
+    .request-card {
         // width: 300px;
     }
     .container1 img {
@@ -53,19 +52,34 @@ mdb-card-text div {
         margin: 3px;
         // margin: 14px;
     }
-    .side-card{
+    .side-card {
         display: none;
     }
-    .responsive1{
+    .responsive1 {
         display: none;
     }
-    mdb-card-title h4{
+    mdb-card-title h4 {
         font-size: 17px;
     }
     .collapse {
-        margin-left:10px;
+        margin-left: 10px;
     }
-    .filters{
+    .filters {
         display: none;
     }
+}
+
+.guidy {
+    position: relative;
+}
+
+.sidebg {
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgb(0, 0, 0));
+    position: absolute;
+    right: 0;
+}
+
+.star {
+    font-size: 12px;
+    font-size: 3vw
 }
