--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -1,31 +1,34 @@
 <div class="row">
-  <div class="col-md-4" *ngFor="let deal of dealsList">
-    <mdb-card>
-      <div class="img-fav">
-          <i *ngIf="!deal.isFavourite" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text" ></i>
-          <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text" ></i>
-          <!--Card image-->
-          <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
-          <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
-          <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
-      </div>
-      <!--Card content-->
-      <mdb-card-body>
-          <!--Title-->
-          <mdb-card-title>
-              <h5><strong>{{deal.places[0]}} Tour</strong></h5>
-          </mdb-card-title>
+    <div class="col-12 col-sm-6 col-md-4" *ngFor="let deal of dealsList">
+        <mdb-card>
+            <div class="img-fav">
+                <i *ngIf="!deal.isFavourite" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
+                <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
+                <!--Card image-->
+                <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
+                <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
+                <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
+            </div>
+            <!--Card content-->
+            <mdb-card-body>
+                <!--Title-->
+                <mdb-card-title>
+                    <h5><strong>{{deal.places[0]}} Tour</strong></h5>
+                </mdb-card-title>
 
-          <!--Text-->
-          <mdb-card-text>
-              <div>{{deal.places.toString()}}.</div>
-              <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
-          </mdb-card-text>
+                <!--Text-->
+                <mdb-card-text>
+                    <div>{{deal.places.toString()}}.</div>
+                    <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
+                </mdb-card-text>
 
-          <a mdbBtn color="primary" (click)="openModal1(dealTour, deal)" mdbWavesEffect>Book Deal</a>
-      </mdb-card-body>
-  </mdb-card>
-  </div>
+                <!-- <a mdbBtn color="primary" (click)="openModal1(dealTour, deal)" mdbWavesEffect>Book Deal</a> -->
+                <div class="float-right">
+                    <button mdbBtn type="button" (click)="openModal1(dealTour, deal)" class="font-weight-bold" mdbWavesEffect>Book Deal</button>
+                </div>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
 </div>
 
 
@@ -50,14 +53,14 @@
                 <h5 class="text-left black-text">Tell me your preferred Date</h5>
                 <div class="row form-inline">
                 </div>
-                    
-                </div>
-                <div class="text-center mt-4">
-                    <button (click)="openModal2(dealTour2)" type="button" class="btn btn-cyan mt-1">Request a personalized Tour</button>
-                </div>
-            
-        <!-- </form> -->
-    </div>
+
+            </div>
+            <div class="text-center mt-4">
+                <button (click)="openModal2(dealTour2)" type="button" class="btn btn-cyan mt-1">Request a personalized Tour</button>
+            </div>
+
+            <!-- </form> -->
+        </div>
         <!--/.Content-->
     </div>
 </div>
@@ -89,26 +92,26 @@
                                     <option *ngFor="let item of groupTypesList" [value]="item">{{item}}</option>
                                 </select>
                             </div>
-    
+
                             <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
                         </div>
                         <div class="col">
                             <div class="form-group">
-                            <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                                <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
                             </div>
                         </div>
                     </div>
                     <div class="text-center mt-4">
                         <button type="submit" class="btn btn-cyan mt-1">Book</button>
                     </div>
-    
+
                 </form>
-                    
-                </div>
-                
-            
-        <!-- </form> -->
-    </div>
+
+            </div>
+
+
+            <!-- </form> -->
+        </div>
         <!--/.Content-->
     </div>
 </div>
