edit page and creat deal

--- a/src/app/modules/guide/components/create-deal/create-deal.component.html
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.html
@@ -1,3 +1,77 @@
-<p>
-  create-deal works!
-</p>
+<div class="cards">
+<mdb-card class="mt-md-5">
+  <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+    <a>
+      <div class="mask"></div>
+    </a>
+  </div>
+  <!--Card content-->
+  <mdb-card-body>
+    <!--Title-->
+    <mdb-card-title>
+      <h4>Card Title</h4>
+    </mdb-card-title>
+
+    <!--Text-->
+    <mdb-card-text>
+     <div class="row">
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">State</label>
+        </div>
+       </div>
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">City</label>
+        </div>
+       </div>
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">People Limit</label>
+        </div>
+       </div>
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">price</label>
+        </div>
+       </div>
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">From</label>
+        </div>
+       </div>
+       <div class="col-6">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">To</label>
+        </div>
+       </div>
+       <div class="col-5">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">Places</label>
+        </div>
+       </div>
+       <div class="col-4 col-xl-5">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">Date</label>
+        </div>
+       </div>
+       <div class="col-3 col-xl-2">
+    <a href="#" mdbBtn style="background:rgba(255, 255, 255, 0.612) ;" mdbWavesEffect>Add</a>
+       </div>
+     </div>
+    </mdb-card-text>
+    <a href="#" mdbBtn style="background:rgba(255, 255, 255, 0.612) ;" mdbWavesEffect>Close</a>
+
+    <a href="#" mdbBtn style="background:rgba(255, 255, 255, 0.612) ;" mdbWavesEffect>Create</a>
+  </mdb-card-body>
+</mdb-card>
+</div>
+<!-- Card -->
