--- a/src/app/shared/components/change-password/change-password.component.scss
+++ b/src/app/shared/components/change-password/change-password.component.scss
@@ -47,6 +47,7 @@ html, body{
 	background: #FFF;
 	max-width: 500px;
 	margin: 0 auto;
+	margin-top: 8px;
 	position: relative;
 	padding: 60px 0;
 	background-image: linear-gradient(-225deg, #63EEF0 0%, #3498DB 100%);
@@ -63,7 +64,6 @@ html, body{
 .signup .form,
 .signup .features{
 	display: inline-block;
-	float: left;
 	position: relative;
 	text-align: left;
 }
@@ -108,7 +108,7 @@ html, body{
 	width: 100%;
 	height: 45px;
 	padding: 0 35px;
-	bordr-radius: 2px;
+	border-radius: 2px;
 	margin-bottom: 10px;
 	border: 1.5px solid #d0d0d0;
 	font-family: 'Open Sans', sans-serif;
