--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -144,12 +144,12 @@
             <th><b>Tourist Name</b></th>
           </tr>
         </thead>
-        <!-- <tbody>
+        <tbody>
           <tr *ngFor="let item of selectedPreviousBookings.touristId; let i = index">
             <td>{{i+1}}</td>
-            <td>{{item.name}}</td>
+            <td>{{item.name | titlecase}}</td>
           </tr>
-        </tbody> -->
+        </tbody>
       </table>
   </div>
   <div class="modal-footer row mx-0 ">
