--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,26 +1,23 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black" [containerInside]="false">
-
+<mdb-navbar SideClass="navbar navbar-expand-sm navbar-dark black" [containerInside]="false" >
     <!-- Navbar brand -->
     <mdb-navbar-brand>
-        <a *ngIf="!jwtService.getToken()" class="navbar-brand" [routerLink]="['/']">
+        <a *ngIf="!jwtService.getToken()" class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">
             <img src="assets/images/areoplane white.png" height="40" alt="Voila">
         </a>
-        <a *ngIf="jwtService.getToken() && (userService.getRole() === 'tourist')" class="navbar-brand" [routerLink]="['/tourists/touristshome']">
+        <a *ngIf="jwtService.getToken() && (userService.getRole() === 'tourist')" class="navbar-brand" [routerLink]="['/tourists/touristshome']" routerLinkActive="active">
             <img src="assets/images/areoplane white.png" height="40" alt="Voila">
         </a>
-        <a  *ngIf="jwtService.getToken() && (userService.getRole() === 'guide')" class="navbar-brand" [routerLink]="['/guide/guidehome']">
+        <a  *ngIf="jwtService.getToken() && (userService.getRole() === 'guide')" class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">
             <img src="assets/images/areoplane white.png" height="40" alt="Voila">
         </a>
     </mdb-navbar-brand>
-
     <!-- Collapsible content -->
     <links>
-
         <!-- Links -->
         <ul *ngIf="!jwtService.getToken()" class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link waves-light"  [routerLink]="['/login/tourist']" mdbWavesEffect>
+              <a class="nav-link waves-light"  [routerLink]="['/login/tourist']" routerLinkActive="active" mdbWavesEffect>
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                   LogIn</a>
           </li>
@@ -30,8 +27,8 @@
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     Register<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['touristsRegister']">Tourists</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['guideRegister']">Guide</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/touristsRegister']" routerLinkActive="active">Tourists</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guideRegister']" routerLinkActive="active">Guide</a>
                 </div>
             </li>
             <li class="nav-item dropdown" dropdown >
@@ -39,14 +36,12 @@
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     <mdb-icon fas icon="question-circle"></mdb-icon><span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">About</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">Contact us</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">Help!</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']"  routerLinkActive="active">About</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']" routerLinkActive="active">Contact us</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']" routerLinkActive="active">Help!</a>
                 </div>
             </li>
-
         </ul>
-
         <ul *ngIf="jwtService.getToken() && (userService.getRole() === 'tourist')" class="navbar-nav ml-auto">
 
             <li class="nav-item">
@@ -56,7 +51,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect>
+                <a class="nav-link waves-light" mdbWavesEffect [routerLink]="['/tourists/touristshome/messages']" routerLinkActive="active">
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon  fas  icon="envelope"></mdb-icon>Message
                 </a>
@@ -71,12 +66,11 @@
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     <mdb-icon fas icon="question-circle"></mdb-icon><span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']">About</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']">Contact us</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']">Help!</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']" routerLinkActive="active">About</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']" routerLinkActive="active">Contact us</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']" routerLinkActive="active">Help!</a>
                 </div>
             </li>
-
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
 
@@ -86,17 +80,14 @@
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/tourists/touristshome/editProfile']" routerLinkActive="active">Edit Profile</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/tourists/touristshome/changePassword']" routerLinkActive="active">Change Password</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout('tourist')">Logout</a>
-
+                    <a class="dropdown-item waves-light text-white" mdbWavesEffect (click)="logout('tourist')" routerLinkActive="active">Logout</a>
                 </div>
             </li>
-
         </ul>
-
         <ul *ngIf="jwtService.getToken() && (userService.getRole() === 'guide')"
             class="navbar-nav ml-auto d-block d-lg-none">
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect>
+                <a class="nav-link waves-light" [routerLink]="['/guide/guidehome/messages']" routerLinkActive="active" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon  fas  icon="envelope"></mdb-icon>Message
                 </a>
@@ -121,35 +112,28 @@
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="calendar-alt"></mdb-icon>Deals</a>
             </li>
-
-
             <li class="nav-item dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     <mdb-icon fas icon="question-circle"></mdb-icon><span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']">About</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']">Contact us</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']">Help!</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']" routerLinkActive="active">About</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']" routerLinkActive="active">Contact us</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']" routerLinkActive="active">Help!</a>
                 </div>
             </li>
-
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-
                     <!-- More<span class="caret"></span> -->
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/editProfile']" routerLinkActive="active">Edit Profile</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/changepassword']" routerLinkActive="active">Change Password</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout('guide')">Logout</a>
-
+                    <a class="dropdown-item waves-light text-white" mdbWavesEffect (click)="logout('guide')" routerLinkActive="active">Logout</a>
                 </div>
             </li>
-
         </ul>
-
         <ul *ngIf="jwtService.getToken() && (userService.getRole() === 'guide')"
             class="navbar-nav ml-auto d-none d-lg-inline-flex">
             <li class="nav-item dropdown" dropdown >
@@ -157,32 +141,26 @@
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     <mdb-icon fas icon="question-circle"></mdb-icon><span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']">About</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']">Contact us</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']">Help!</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/aboutUs']" routerLinkActive="active">About</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/contact']" routerLinkActive="active">Contact us</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/help']" routerLinkActive="active">Help!</a>
                 </div>
             </li>
-
             <li class="nav-item avatar dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-
                     <!-- More<span class="caret"></span> -->
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome']" routerLinkActive="active">Dashboard</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/editProfile']" routerLinkActive="active">Edit Profile</a>
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/guide/guidehome/changepassword']" routerLinkActive="active">Change Password</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout('guide')">Logout</a>
-
+                    <a class="dropdown-item waves-light text-white" mdbWavesEffect (click)="logout('guide')" routerLinkActive="active">Logout</a>
                 </div>
             </li>
-
         </ul>
         <!-- Links -->
     </links>
     <!-- Collapsible content -->
-
-
-
 </mdb-navbar>
 <!--/.Navbar-->
