--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,80 +9,15 @@
 html,
 body {
     height: 100%;
+    min-height: 50vh;
     overflow-x: hidden;
 }
-
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
 ::-webkit-scrollbar {
     width: 8px;
 }
-
-// .modal-dialog.full-screen {
-//   position:fixed;
-//   //width:auto;  // uncomment to make the width based on the left/right attributes.
-//   margin:auto;                        
-//   left:0px;
-//   right:0px;
-//   top:0px;
-//   bottom:0px;
-// }
-
-// .modal-dialog.full-screen .modal-content {
-//     position:absolute;
-//     left:10px;
-//     right:10px;
-//     top:10px;
-//     bottom:10px;
-// }
-
-// .modal-dialog.full-screen .modal-content .modal-header {
-//       height:55px;  // adjust as needed.
-// }
-
-// .modal-dialog.full-screen .modal-content .modal-body {
-//       overflow-y: auto;
-//         position: absolute;
-//         top: 0;
-//         bottom: 0;
-//       left:0;
-//       right:0;
-//         margin-top: 55px; // .modal-header height
-//         margin-bottom: 80px;  // .modal-footer height
-// }
-
-// .modal-dialog.full-screen .modal-content .modal-footer {
-//       height:80px;  // adjust as needed.
-//       position:absolute;
-//       bottom:0;
-//       left:0;
-//       right:0;
-// }
-
-// .modal .modal-open {
-//   overflow-y: auto;
-//   min-height: calc(100vh - 200px);
-//   max-height: 150vh;
-// }
-
-// .modal-body {
-//   max-height: 150vh;
-//   overflow-y: auto;
-
-// }
-// .modal-dialog{
-//   overflow-y: initial !important;
-//   min-height: calc(100vh - 200px);
-//   max-height: 150vh;
-//   position: relative;
-// }
-
-// .modal-body{
-//   // height: 250px;
-//   overflow-y: auto;
-// }
 
  ::-webkit-scrollbar-track {
     // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -107,10 +42,23 @@ body {
     background-color: #64b5f6;
 }
 
+.navbar {
+  z-index: 100;
+}
+
 .cust-grid {
     display: flex;
     justify-content: center;
     flex-flow:row wrap;
+  }
+
+  .vertical-center {
+    min-height: 100%; 
+    min-height: 72vh;
+    display: flex;
+    width: 100%;
+    align-items: center;
+  
   }
 
     /* input error */
